--- a/projetsencours.html
+++ b/projetsencours.html
@@ -28,10 +28,15 @@
 <body>
 
 <!-- Analytics -->
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WGT7Q2M"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QK26HPBYYX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QK26HPBYYX');
+</script>
 <!-- /Analytics -->
 
 
@@ -194,7 +199,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zAsKi27Q4f8TtwLnyI9ZfBc4PiboEtwuhaoc+B/4a4SblRUX0CwvDfoyp1ZJTRWd/ZE4Y33dzc0LeZ5CIej7t8xg5kyKjspiyO7lWlAv25M8Ssv07q85V/9b9Emki9OQ">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="vgogkFWiHCn8XgMt+7b+Uhc5FAlgFmbdSwcjLdtrp+EtPDCMKRxaUyYuBf891Jkjx9NgHF4C3MmwNycBOSJLDe1D2mtvOMEhFrsAEPzLybOPmzjGg+z8ulDZk0pnewID">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
