--- a/actualites-3.html
+++ b/actualites-3.html
@@ -29,10 +29,15 @@
 <body>
 
 <!-- Analytics -->
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WGT7Q2M"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QK26HPBYYX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QK26HPBYYX');
+</script>
 <!-- /Analytics -->
 
 
@@ -123,12 +128,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="sU0AB6HApl" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="sU0TGQweNS" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="19" data-bs-slide-to="19" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="20" data-bs-slide-to="20" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="21" data-bs-slide-to="21" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="22" data-bs-slide-to="22" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="23" data-bs-slide-to="23" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="24" data-bs-slide-to="24" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="25" data-bs-slide-to="25" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="26" data-bs-slide-to="26" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="27" data-bs-slide-to="27" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="28" data-bs-slide-to="28" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="29" data-bs-slide-to="29" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="30" data-bs-slide-to="30" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li><li data-slide-to="31" data-bs-slide-to="31" data-target="#sU0AB6HApl" data-bs-target="#sU0AB6HApl"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="19" data-bs-slide-to="19" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="20" data-bs-slide-to="20" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="21" data-bs-slide-to="21" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="22" data-bs-slide-to="22" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="23" data-bs-slide-to="23" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="24" data-bs-slide-to="24" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="25" data-bs-slide-to="25" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="26" data-bs-slide-to="26" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="27" data-bs-slide-to="27" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="28" data-bs-slide-to="28" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="29" data-bs-slide-to="29" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="30" data-bs-slide-to="30" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li><li data-slide-to="31" data-bs-slide-to="31" data-target="#sU0TGQweNS" data-bs-target="#sU0TGQweNS"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -295,11 +300,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sU0AB6HApl">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sU0TGQweNS">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sU0AB6HApl">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sU0TGQweNS">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -332,7 +337,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="X+SgM8QeeoJkdkJhVdifuo+nTXlV25dzvj/QWUzh5v7suAvVi5rgh8vsJxLS+L/fn1NpawA1H/UMroWqjEqKrajAlQK4r6j1JiMgMe6tcLEYB9D176tUUejzjWbtChQt">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="BJgtWJcOha9zfriqMzL6DU4TPHaxuNM9vB8xtUMcJ8NQ90YjJTnjM6yHa6WLhwad6o6ybUMbVPe6quwwE4dNLhBsUDpLAiFGWgs5hWfcRnGHXaHZ/DBHtBsqJl8DsgWY">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -389,7 +394,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
