--- a/ru/projetsencours.html
+++ b/ru/projetsencours.html
@@ -28,10 +28,15 @@
 <body>
 
 <!-- Analytics -->
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WGT7Q2M"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QK26HPBYYX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QK26HPBYYX');
+</script>
 <!-- /Analytics -->
 
 
@@ -192,7 +197,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="CJ5LGwuVcg9uFtUqRkgb+y189ltcdE/Nx1N3GaHGjftgVSTaHeh/E8yFxwgiKM0qQPk1AyA+tBalcI6Sy6V9DipSNmlHRCpdtmwwyYvKz3CY88EHxAyX4ZP9//vrp0PX">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="a8MBrl15wSgCJNwbW3hLFdNxYAGdNuE6EjVFr3EIRnxpilHga9o6SYjyLvxIxWSxgEMH67oPiJLj4zLYVXL8BJwINjIe607hjs4HWEWEJKOWPjtYYI5s201jZRcI6Gps">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
