--- a/ru/actualites-1.html
+++ b/ru/actualites-1.html
@@ -28,10 +28,15 @@
 <body>
 
 <!-- Analytics -->
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WGT7Q2M"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QK26HPBYYX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QK26HPBYYX');
+</script>
 <!-- /Analytics -->
 
 
@@ -163,7 +168,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Z2FQHy0qJlN5EKzzRbAY4tRgPC18+XsIPId2FrXfGu17lN6Qedw2TddecCZ4vYu8ZvPCA3UV5tU4lHR+p6A+k2UuwK1lK/Puo+VqgNGcAULH+WWeAYELuWFSpnSbk/5Q">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="WNi0yBCBgr2SyCoZtV7A8lJ5WL0aQ7P7xk9Zcqc69dUPr8S2cK0RaIRzvjiXfWNBDj8KME1F1fNfOIQj4fxWICjlK4YaIY6u3w98lsyZdZwkIrkdWBz4FuLjVxFDiapS">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -219,7 +224,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
