--- a/ru/actualites-3.html
+++ b/ru/actualites-3.html
@@ -29,10 +29,15 @@
 <body>
 
 <!-- Analytics -->
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WGT7Q2M"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QK26HPBYYX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QK26HPBYYX');
+</script>
 <!-- /Analytics -->
 
 
@@ -122,12 +127,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="sU0Cmg5G7A" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="sU0U01tBY1" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="19" data-bs-slide-to="19" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="20" data-bs-slide-to="20" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="21" data-bs-slide-to="21" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="22" data-bs-slide-to="22" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="23" data-bs-slide-to="23" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="24" data-bs-slide-to="24" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="25" data-bs-slide-to="25" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="26" data-bs-slide-to="26" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="27" data-bs-slide-to="27" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="28" data-bs-slide-to="28" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="29" data-bs-slide-to="29" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="30" data-bs-slide-to="30" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li><li data-slide-to="31" data-bs-slide-to="31" data-target="#sU0Cmg5G7A" data-bs-target="#sU0Cmg5G7A"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="19" data-bs-slide-to="19" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="20" data-bs-slide-to="20" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="21" data-bs-slide-to="21" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="22" data-bs-slide-to="22" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="23" data-bs-slide-to="23" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="24" data-bs-slide-to="24" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="25" data-bs-slide-to="25" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="26" data-bs-slide-to="26" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="27" data-bs-slide-to="27" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="28" data-bs-slide-to="28" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="29" data-bs-slide-to="29" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="30" data-bs-slide-to="30" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="31" data-bs-slide-to="31" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -294,11 +299,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sU0Cmg5G7A">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sU0U01tBY1">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sU0Cmg5G7A">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sU0U01tBY1">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -331,7 +336,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="YAgbJrsPgHokDXiqTToz5+UqmH6PaqsB3ermYx2YU4eqartOW9eeChWENa1bwHZ+Xzv8I29Vcf4gulMkjeFSxam28o04RL8uXM8lcw043Wj+b0MPzic1xbNj1WdofpQ0">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="uL2mkzghVl66UMe2eQqZA35QtR/yRBHpqIUrG1zdI3OTcbf73W1vtKri2LHmeVnScK3lpUYSxPhzvDB8hRlBnA/CyzkM15TEXJy3ElCYDkxmWHFMwM2FQRcKClqjQW1m">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -387,7 +392,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
