--- a/ru/actualites.html
+++ b/ru/actualites.html
@@ -28,10 +28,15 @@
 <body>
 
 <!-- Analytics -->
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WGT7Q2M"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QK26HPBYYX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QK26HPBYYX');
+</script>
 <!-- /Analytics -->
 
 
@@ -204,7 +209,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="qwDsr71SnH+qFJfDMlLdtTVYPhca7hsjPU5rsUbeluGOkTNcuFO6PxZwz+g3jVEp8UYzafe08a/AAQ4zzStfJqD+zgFrWI02uv2LBP3CBT+FpgdQq4+0nlJE121Okosb">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="KpQb5z2lPlMUpd+HvXphVKAfommA5kyuN9rYON8uhSiuu3M2v30sEV/l5q5o3tl7FEX/HarIDqhOX/wiqqEcrIMtq6tnC8exzRbPsnvwTjXcPtKwtOF8f0KtjTLWZ3lA">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -260,7 +265,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
