--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-96x61.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="L'Institut a pour mission de promouvoir la coopération académique, scientifique, culturelle, professionnelle et économique entre les citoyens des pays francophones et russophones afin de développer la diplomatie publique et la coopération internationale à travers une plateforme d'échanges interculturels et de mises en œuvre de projets communs.">
   
   
   <title>Institut Franco-Russe UPESR</title>
@@ -161,7 +161,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="CjB7q4B+MpN1jJ87JnrTuqJ3D4K2QrH6rKGeTYOm+n5mWMjUwmit9cITEQJ5GiFGZgXAXgATWeMN8UwhFM7/VDwY6e+sRPB+db+n2JTZXNJyLrvpk57HFDdaa/cXRfgT">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bAw78o6awLPsz5IJH6sACTwJdGF2xteurJ/3XQuVqHy4JIyRiS9dJmp2tOlt7M4q6MBH0B/NcCQLVhRVLTrTVoSn0BGQ/JOMkuW6npu2hfKzk/60Hx+qZhRYzce1BE/P">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -209,16 +209,15 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong>Université Polytechnique d'État du Sud de la Russie M. I. Platov</strong></h5>
                 <ul class="list mbr-fonts-style mb-4 display-4">
                     <li class="mbr-text item-wrap">
-                        <a class="text-white" href="https://mobirise.co/">https://www.npi-tu.ru</a></li>
+                        <a class="text-white text-primary" href="https://www.npi-tu.ru" target="_blank">https://www.npi-tu.ru</a></li>
                 </ul>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-5 display-7">
                     <strong>Retour</strong></h5>
                 <p class="mbr-text mbr-fonts-style mb-4 display-7">
-                    Si vous êtes intéressé par une coopération avec l’Institut Franco-Russe de l’UPESR, vous avez une idée ou un projet, ou vous ne connaissez pas encore le domaine d'interaction potentielle et souhaitez en discuter, nous serons toujours heureux de vos message 
-                </p>
+                    Si vous êtes intéressé par une coopération avec l’Institut Franco-Russe de l’UPESR, vous avez une idée ou un projet, ou vous ne connaissez pas encore le domaine d'interaction potentielle et souhaitez en discuter, nous serons toujours heureux de vos message.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
