--- a/organisations.html
+++ b/organisations.html
@@ -310,7 +310,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="svn4YahzZAzOY7l7s+Qtecs2LuUSuAplRUchWAoLZNdU8iPQSmjq3868n1OW7kB3Wq8KkP/J3dAPLS4CxYc5CwuPBTx10I10c40ddiNSbBJB8z0UDv1FOW0vj6rbRyQT">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="kglhYa5xB3SXjB3AamPXsKgqV/xkFJauDA6eTYwPt9dD7Fmcmv3l63zUsCsc3xG28qSL7cjnfHrG7nNa9IGrUV5KOHikDjxQrYiVtO22ah/b5DlzckG34suTvZ4qt5D0">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -358,13 +358,12 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong>Université Polytechnique d'État du Sud de la Russie M. I. Platov</strong></h5>
                 <ul class="list mbr-fonts-style mb-4 display-4">
                     <li class="mbr-text item-wrap">
-                        <a class="text-white" href="https://mobirise.co/">https://www.npi-tu.ru</a></li>
+                        <a class="text-white text-primary" href="https://www.npi-tu.ru" target="_blank">https://www.npi-tu.ru</a></li>
                 </ul>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-5 display-7">
                     <strong>Retour</strong></h5>
                 <p class="mbr-text mbr-fonts-style mb-4 display-7">
-                    Si vous êtes intéressé par une coopération avec l’Institut Franco-Russe de l’UPESR, vous avez une idée ou un projet, ou vous ne connaissez pas encore le domaine d'interaction potentielle et souhaitez en discuter, nous serons toujours heureux de vos message 
-                </p>
+                    Si vous êtes intéressé par une coopération avec l’Institut Franco-Russe de l’UPESR, vous avez une idée ou un projet, ou vous ne connaissez pas encore le domaine d'interaction potentielle et souhaitez en discuter, nous serons toujours heureux de vos message.</p>
             </div>
             <div class="col-12 col-md-6">
                 <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
