--- a/ru/actualites-1.html
+++ b/ru/actualites-1.html
@@ -168,7 +168,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="WNi0yBCBgr2SyCoZtV7A8lJ5WL0aQ7P7xk9Zcqc69dUPr8S2cK0RaIRzvjiXfWNBDj8KME1F1fNfOIQj4fxWICjlK4YaIY6u3w98lsyZdZwkIrkdWBz4FuLjVxFDiapS">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ThbKzwNB/bsigaH1VURveaqntkQJHp5vVQD+zjlAEjurUOLa7k/8N7ROCtKPNCEfJi/coT2iOO16mAe2zv6QTliGTn0x2mmonfqtVK9/3sYxFV0drWH2MSxuuniKquHI">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -215,13 +215,12 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong>Южно-Российский государственный политехнический университет (НПИ) имени М.И. Платова</strong></h5>
                 <ul class="list mbr-fonts-style mb-4 display-4">
                     <li class="mbr-text item-wrap">
-                        <a class="text-white" href="https://mobirise.co/">https://www.npi-tu.ru</a></li>
+                        <a class="text-white text-primary" href="https://www.npi-tu.ru" target="_blank">https://www.npi-tu.ru</a></li>
                 </ul>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-5 display-7">
                     <strong>Обратная связь</strong></h5>
                 <p class="mbr-text mbr-fonts-style mb-4 display-7">
-                    Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас идея или проект, либо Вы ещё точно не знаете область  
-                </p>
+                    Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
                 <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
