--- a/ru/actualites-3.html
+++ b/ru/actualites-3.html
@@ -127,12 +127,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="sU0U01tBY1" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="sU2LJ3R3GW" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="19" data-bs-slide-to="19" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="20" data-bs-slide-to="20" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="21" data-bs-slide-to="21" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="22" data-bs-slide-to="22" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="23" data-bs-slide-to="23" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="24" data-bs-slide-to="24" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="25" data-bs-slide-to="25" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="26" data-bs-slide-to="26" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="27" data-bs-slide-to="27" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="28" data-bs-slide-to="28" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="29" data-bs-slide-to="29" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="30" data-bs-slide-to="30" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li><li data-slide-to="31" data-bs-slide-to="31" data-target="#sU0U01tBY1" data-bs-target="#sU0U01tBY1"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="19" data-bs-slide-to="19" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="20" data-bs-slide-to="20" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="21" data-bs-slide-to="21" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="22" data-bs-slide-to="22" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="23" data-bs-slide-to="23" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="24" data-bs-slide-to="24" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="25" data-bs-slide-to="25" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="26" data-bs-slide-to="26" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="27" data-bs-slide-to="27" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="28" data-bs-slide-to="28" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="29" data-bs-slide-to="29" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="30" data-bs-slide-to="30" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li><li data-slide-to="31" data-bs-slide-to="31" data-target="#sU2LJ3R3GW" data-bs-target="#sU2LJ3R3GW"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -299,11 +299,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sU0U01tBY1">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sU2LJ3R3GW">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sU0U01tBY1">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sU2LJ3R3GW">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -336,7 +336,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="uL2mkzghVl66UMe2eQqZA35QtR/yRBHpqIUrG1zdI3OTcbf73W1vtKri2LHmeVnScK3lpUYSxPhzvDB8hRlBnA/CyzkM15TEXJy3ElCYDkxmWHFMwM2FQRcKClqjQW1m">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="DIwJ2OZHYDRaOEYWGPxO4QV4TJZESGEWkuq5J4gSyokZQC0EM2thKegIoNj2p+RhrWDgFTB+4nqCjUZLAHPyCRBhQWXkE03K4P/hzxMJHoLdhBGMt3JPkMSQfKjv+X24">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -383,16 +383,15 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong>Южно-Российский государственный политехнический университет (НПИ) имени М.И. Платова</strong></h5>
                 <ul class="list mbr-fonts-style mb-4 display-4">
                     <li class="mbr-text item-wrap">
-                        <a class="text-white" href="https://mobirise.co/">https://www.npi-tu.ru</a></li>
+                        <a class="text-white text-primary" href="https://www.npi-tu.ru" target="_blank">https://www.npi-tu.ru</a></li>
                 </ul>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-5 display-7">
                     <strong>Обратная связь</strong></h5>
                 <p class="mbr-text mbr-fonts-style mb-4 display-7">
-                    Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас идея или проект, либо Вы ещё точно не знаете область  
-                </p>
+                    Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
