--- a/ru/actualites.html
+++ b/ru/actualites.html
@@ -209,7 +209,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="KpQb5z2lPlMUpd+HvXphVKAfommA5kyuN9rYON8uhSiuu3M2v30sEV/l5q5o3tl7FEX/HarIDqhOX/wiqqEcrIMtq6tnC8exzRbPsnvwTjXcPtKwtOF8f0KtjTLWZ3lA">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="wImhvuet4nmJvRaJWdJfIH1blQzpX1nVnzfMi/I5owLLxf8v03ljO9GUmexDPnuXYhvWUVP3KzR3VjETj2LV8BaGTOgm+vaQeh1W/FG+elINp5hS67vzmTM/qjiqM/op">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -256,13 +256,12 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong>Южно-Российский государственный политехнический университет (НПИ) имени М.И. Платова</strong></h5>
                 <ul class="list mbr-fonts-style mb-4 display-4">
                     <li class="mbr-text item-wrap">
-                        <a class="text-white" href="https://mobirise.co/">https://www.npi-tu.ru</a></li>
+                        <a class="text-white text-primary" href="https://www.npi-tu.ru" target="_blank">https://www.npi-tu.ru</a></li>
                 </ul>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-5 display-7">
                     <strong>Обратная связь</strong></h5>
                 <p class="mbr-text mbr-fonts-style mb-4 display-7">
-                    Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас идея или проект, либо Вы ещё точно не знаете область  
-                </p>
+                    Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
                 <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
