--- a/ru/experts.html
+++ b/ru/experts.html
@@ -230,7 +230,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="3Wx0achG33b2IeNCovxFaS/iNn1g4ikKkqjKQ/3/GFs+JcvVIsIZ0yAJ8+evutrssPVjRoGwkIkrgtOml2mq1fJMr0ePlSF1pmJ3KW4G5WBt2TncVJAPgTbKiXVlHdyR">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="lBEu20M92Rd1t5flovJV993Q0WyvxdDCjRefmMO1IsrAvS14DMnKx6ZhGaoSLRqIah1/53KK8IwLtDKWk3wiA2wMXBPUS0m1M37QPIexQ838JBcp6GVwjm2k3EH2KdNP">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -277,16 +277,15 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong>Южно-Российский государственный политехнический университет (НПИ) имени М.И. Платова</strong></h5>
                 <ul class="list mbr-fonts-style mb-4 display-4">
                     <li class="mbr-text item-wrap">
-                        <a class="text-white" href="https://mobirise.co/">https://www.npi-tu.ru</a></li>
+                        <a class="text-white text-primary" href="https://www.npi-tu.ru" target="_blank">https://www.npi-tu.ru</a></li>
                 </ul>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-5 display-7">
                     <strong>Обратная связь</strong></h5>
                 <p class="mbr-text mbr-fonts-style mb-4 display-7">
-                    Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас идея или проект, либо Вы ещё точно не знаете область  
-                </p>
+                    Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
