--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="container">
         <div class="row justify-content-end">
             <div class="col-12 col-lg-6">
-                <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>INSTITUT FRANCO-RUSSE</strong></h1>
+                <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>INSTITUT</strong><br><strong>FRANCO-RUSSE</strong></h1>
                 <h2 class="mbr-section-subtitle mbr-fonts-style mbr-white mb-3 display-2">Université Polytechnique<br>d'État du Sud de la Russie<br>M.I. Platov</h2>
                 <p class="mbr-text mbr-fonts-style mbr-white display-7">
                     L'Institut a pour mission de promouvoir la coopération académique, scientifique, culturelle, professionnelle et économique entre les citoyens des pays francophones et russophones afin de développer la diplomatie publique et la coopération internationale à travers une plateforme d'échanges interculturels et de mises en œuvre de projets communs.</p>
@@ -161,7 +161,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bAw78o6awLPsz5IJH6sACTwJdGF2xteurJ/3XQuVqHy4JIyRiS9dJmp2tOlt7M4q6MBH0B/NcCQLVhRVLTrTVoSn0BGQ/JOMkuW6npu2hfKzk/60Hx+qZhRYzce1BE/P">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="vGOW5KhgU6J/kQUBJ8t3ATSAD6t0XkV+XW4XdCt6NZaIw9ONduKrki2newEvA+BSrnASFpOrBEYuQFkmp+JFb7AIyfaXUXR89Skd+R9kxObBcqnb6hJcnFQPrZroXvlc">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -217,7 +217,7 @@
                     Si vous êtes intéressé par une coopération avec l’Institut Franco-Russe de l’UPESR, vous avez une idée ou un projet, ou vous ne connaissez pas encore le domaine d'interaction potentielle et souhaitez en discuter, nous serons toujours heureux de vos message.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
