--- a/ru/organisations.html
+++ b/ru/organisations.html
@@ -315,7 +315,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="F3/s6ngmjbN6ghHZgwo2QDMFwBbWdCRvg6AaWWl5w7HlYJ0gBBx8ENsTtEK33nQZXB2p1kvUp3m5FansrpwaB/hhHrwA+XGG7SKjmuUhNenfwteHF60PLmMI+1DD5pio">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="iK8gxPBQx1sRMQ/lTOazzp1r7n3JcVV6YVubVIGbitNLpYveLtCtmCgyF7CfB975R8QAbCneSXksPTT6sp/5sPbrM2Nw3N/2GbgdZvFgsoEDaKi5wufYWDUcqnt8atFu">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -352,7 +352,7 @@
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
                     <strong>Адрес</strong></h5>
-                <p class="mbr-text mbr-fonts-style display-7">РФ, 346428, Ростовская обл., г. Новочеркасск, ул. Просвещения, 132</p> <br>
+                <p class="mbr-text mbr-fonts-style display-7">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
                 <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор: Елена Сидорова<br>Эл. почта: sidorova_ev@npi-tu.ru <br>
@@ -367,10 +367,10 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-5 display-7">
                     <strong>Обратная связь</strong></h5>
                 <p class="mbr-text mbr-fonts-style mb-4 display-7">
-                    Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
+                    Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
@@ -411,7 +411,7 @@
             </div>
             <div class="col-sm-12 copyright pl-0">
                 <p class="mbr-text mbr-fonts-style mbr-white display-7">
-                    © Copyright 2025 IFR UPESR</p>
+                    © Copyright 2022 IFR UPESR</p>
             </div>
         </div>
     </div>
