--- a/ru/projetsencours.html
+++ b/ru/projetsencours.html
@@ -197,7 +197,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ZTUmjmftPDIIM7HNhdwqy1KaoAOGKvceZQVCMmDORHUUPMp5s/kXdLWz1m3D8byu1jDJ+syOOZZgJhjGHv6INHwNzRddHcvF9T/a3qz3hC2MhqLZz2Gz8NM7FlbUwBu5">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="rmjmB+KP6IlEk9mjGQ3+FpzQI80rLrdNndKn2IISbl40TlisOoY5JWYOdFDCep1PwM2NPs9jErWn01fzDJhKYsMtWruAFbZo7m/GXdJPk1A0WhTRYC0rKSBT7ZXsayvq">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -234,7 +234,7 @@
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
                     <strong>Адрес</strong></h5>
-                <p class="mbr-text mbr-fonts-style display-7">РФ, 346428, Ростовская обл., г. Новочеркасск, ул. Просвещения, 132</p> <br>
+                <p class="mbr-text mbr-fonts-style display-7">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
                 <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор: Елена Сидорова<br>Эл. почта: sidorova_ev@npi-tu.ru <br>
@@ -249,10 +249,10 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-5 display-7">
                     <strong>Обратная связь</strong></h5>
                 <p class="mbr-text mbr-fonts-style mb-4 display-7">
-                    Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
+                    Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
@@ -293,7 +293,7 @@
             </div>
             <div class="col-sm-12 copyright pl-0">
                 <p class="mbr-text mbr-fonts-style mbr-white display-7">
-                    © Copyright 2025 IFR UPESR</p>
+                    © Copyright 2022 IFR UPESR</p>
             </div>
         </div>
     </div>
